# halo2

./: .gitignore  Cargo.toml  rust-toolchain
.github/workflows/: ci.yml  ci_main.yml
halo2_gadgets/: Cargo.toml
halo2_gadgets/benches/: poseidon.rs  primitives.rs  sha256.rs
halo2_gadgets/src/: ecc.rs  poseidon.rs  sha256.rs  sinsemilla.rs  utilities.rs
halo2_gadgets/src/ecc/: chip.rs
halo2_gadgets/src/ecc/chip/: add.rs  (+5 more)
halo2_gadgets/src/poseidon/: pow5.rs  primitives.rs
halo2_gadgets/src/sha256/: table16.rs
halo2_gadgets/src/sinsemilla/: chip.rs  merkle.rs  message.rs  primitives.rs
halo2_gadgets/src/utilities/: cond_swap.rs  decompose_running_sum.rs  lookup_range_check.rs
halo2_proofs/: Cargo.toml
halo2_proofs/benches/: arithmetic.rs  dev_lookup.rs  fft.rs  plonk.rs
halo2_proofs/examples/: circuit-layout.rs  cost-model.rs  serialization.rs  shuffle.rs  simple-example.rs  two-chip.rs
halo2_proofs/src/: arithmetic.rs  circuit.rs  dev.rs  helpers.rs  lib.rs  plonk.rs  poly.rs  transcript.rs
halo2_proofs/src/arithmetic/: field_fft.rs  group_fft.rs  multi_exp.rs  util.rs
halo2_proofs/src/circuit/: layouter.rs  value.rs
halo2_proofs/src/dev/: cost.rs  failure.rs  gates.rs  graph.rs  tfp.rs  util.rs
halo2_proofs/src/plonk/: assigned.rs  circuit.rs  evaluation.rs  keygen.rs  lookup.rs  permutation.rs  prover.rs  verifier.rs
halo2_proofs/src/poly/: commitment.rs  domain.rs  evaluator.rs  multiopen.rs  multiopen_test.rs  query.rs
halo2_proofs/src/transcript/: blake2b.rs  mod.rs  mod.rs.bak  poseidon.rs
halo2_proofs/tests/: plonk_api.rs
(+64 files in other folders)
